name:                spotify
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/spotify#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md
library
  default-extensions: OverloadedStrings

executable spotify
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:      base >= 4.7 && < 5
                    , aeson
                    , text
                    , bytestring
                    , aeson-casing
                    , containers
                    , http-conduit
                    , http-client
                    , http-client-tls
                    , http-types
                    , yesod
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wno-type-defaults
